--- a/240202/jQuery/index02.html
+++ b/240202/jQuery/index02.html
@@ -18,90 +18,63 @@
       <div class="items">
         <div>
           <a href="./portfolio01 copy 2.html" data-featherlight="iframe">
-            <img
-              src="./class01/img_20240202/8/thum-portfolio-01.jpg"
-              alt="thum01"
-            />
+            <img src="./images02/portfolio-01.jpg" alt="thum01" />
           </a>
           <span class="material-symbols-outlined"> add </span>
           <span>Website Portfolio #01</span>
         </div>
         <div>
           <a href="./portfolio02 copy 3.html" data-featherlight="iframe">
-            <img
-              src="./class01/img_20240202/8/thum-portfolio-02.jpg"
-              alt="thum02"
-            />
+            <img src="./images02/portfolio-02.jpg" alt="thum02" />
           </a>
           <span class="material-symbols-outlined"> add </span>
           <span>Website Portfolio #02</span>
         </div>
         <div>
           <a href="./portfolio03 copy 4.html" data-featherlight="iframe">
-            <img
-              src="./class01/img_20240202/8/thum-portfolio-03.jpg"
-              alt="thum03"
-            />
+            <img src="./images02/portfolio-03.jpg" alt="thum03" />
           </a>
           <span class="material-symbols-outlined"> add </span>
           <span>Website Portfolio #03</span>
         </div>
         <div class="focus">
           <a href="./portfolio04.html" data-featherlight="iframe">
-            <img
-              src="./class01/img_20240202/8/thum-portfolio-04.jpg"
-              alt="thum04"
-            />
+            <img src="./images02/portfolio-04.jpg" alt="thum04" />
           </a>
           <span class="material-symbols-outlined"> add </span>
           <span>Website Portfolio #04</span>
         </div>
         <div>
           <a href="./portfolio05 copy.html" data-featherlight="iframe">
-            <img
-              src="./class01/img_20240202/8/thum-portfolio-05.jpg"
-              alt="thum05"
-            />
+            <img src="./images02/portfolio-05.jpg" alt="thum05" />
           </a>
           <span class="material-symbols-outlined"> add </span>
           <span>Website Portfolio #05</span>
         </div>
         <div>
           <a href="./portfolio06 copy 8.html" data-featherlight="iframe">
-            <img
-              src="./class01/img_20240202/8/thum-portfolio-06.jpg"
-              alt="thum06"
-            />
+            <img src="./images02/portfolio-06.jpg" alt="thum06" />
           </a>
           <span class="material-symbols-outlined"> add </span>
           <span>Website Portfolio #06</span>
         </div>
         <div>
           <a href="./portfolio07 copy 7.html" data-featherlight="iframe">
-            <img
-              src="./class01/img_20240202/8/thum-portfolio-07.jpg"
-              alt="thum07"
-            />
+            <img src="./images02/portfolio-07.jpg" alt="thum07" />
           </a>
           <span class="material-symbols-outlined"> add </span>
           <span>Website Portfolio #07</span>
         </div>
         <div>
           <a href="./portfolio08 copy 6.html" data-featherlight="iframe">
-            <img
-              src="./class01/img_20240202/8/thum-portfolio-08.jpg"
-              alt="thum08"
-            />
+            <img src="./images02/portfolio-08.jpg" alt="thum08" />
           </a>
           <span class="material-symbols-outlined"> add </span>
           <span>Website Portfolio #08</span>
         </div>
         <div>
           <a href="./portfolio09 copy 5.html" data-featherlight="iframe">
-            <img
-              src="./class01/img_20240202/8/thum-portfolio-09.jpg"
-              alt="thum09"
-            />
+            <img src="./images02/portfolio-09.jpg" alt="thum09" />
           </a>
           <span class="material-symbols-outlined"> add </span>
           <span>Website Portfolio #09</span>
