--- a/240202/jQuery02/index.html
+++ b/240202/jQuery02/index.html
@@ -16,14 +16,14 @@
       <div class="items">
         <aside class="item">
           <b>Web Portfolio</b>
-          <h2>Web Publishing</h2>
+          <h2>Website Publishing</h2>
           <p>
             <q>
-              사용자의 편리성을 생각하며 미술이라는 컨텐츠와 어울리게 UI / UX
+              사용자의 편리성을 생각하며 미술이라는 컨텐츠와 어울리게 UI/UX
               구조설계를 진행하였습니다. 그리고 기존 사이트에서 반응형페이지가
-              될 수 있도록 제작했습니다. <br />
-              전체 폰트 중 영문은 Montserrat, 한글은 Noto Sans KR을 사용했으며,
-              제작기간은 2024년 01월 02일부터 02월 16일까지 입니다.
+              될 수 있도록 제작했습니다.<br /><br />전체 폰트 중 영문은
+              Montserrat, 한글은 Noto Sans KR을 사용했으며, 제작기간은 2024년
+              01월 02일부터 02월 16일까지 입니다.
             </q>
           </p>
           <p class="portfolio-info">
@@ -44,9 +44,14 @@
               class="btn-view pc"
               href="./image01.html"
               data-featherlight="iframe"
-              >PC</a
+              >pc</a
             >
-            <a class="btn-view mobile" href="#">mobile</a>
+            <a
+              class="btn-view mobile"
+              href="./scss_p05/index.html"
+              data-featherlight="iframe"
+              >mobile</a
+            >
           </div>
         </div>
         <div class="item thum">
@@ -54,8 +59,13 @@
             <img src="./9/web-portfolio-02.jpg" alt="portfolio02" />
           </div>
           <div class="portfolio-title">
-            Website portfolio #01
-            <a class="btn-view pc" href="" data-featherlight="iframe">PC</a>
+            Website portfolio #02
+            <a
+              class="btn-view pc"
+              href="./image02copy.html"
+              data-featherlight="iframe"
+              >pc</a
+            >
             <a class="btn-view mobile" href="#">mobile</a>
           </div>
         </div>
@@ -64,12 +74,12 @@
             <img src="./9/web-portfolio-03.jpg" alt="portfolio03" />
           </div>
           <div class="portfolio-title">
-            Website portfolio #01
+            Website portfolio #03
             <a
               class="btn-view pc"
-              href="./image03copy 3.html"
-              ata-featherlight="iframe"
-              >PC</a
+              href="./image03copy3.html"
+              data-featherlight="iframe"
+              >pc</a
             >
             <a class="btn-view mobile" href="#">mobile</a>
           </div>
