--- a/profile/index.html
+++ b/profile/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/b06e382e17.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- custom style -->
     <link rel="stylesheet" href="./style.css" />
     <script defer src="./script.js"></script>
   </head>
   <body>
     <div class="wrap">
-      <header>
+      <div class="colorChange" id="colors">
+        <i class="fa-solid fa-gear"></i>
+      </div>
+      <header id="colors">
         <span class="logo">logo</span>
         <nav>
           <ul class="gnb">
@@ -31,7 +40,9 @@
         <div class="section home">
           <div class="container">
             <div class="title">
-              <span class="top-text">High<span class="blue">SEUL</span></span>
+              <span class="top-text"
+                >High<span id="colorstext" class="blue">SEUL</span></span
+              >
               <span class="under-text">Portfolio</span>
               <p>
                 안녕하세요 더 높은 곳을 향해<br />
@@ -43,11 +54,15 @@
         </div>
         <div class="section about">
           <div class="container">
-            <span class="section-tit">It's me</span>
+            <span class="section-tit"
+              >It's me
+              <div class="underbar" id="colors"></div>
+              <div class="inner" id="colors"></div>
+            </span>
             <div class="section-inner">
               <ul>
                 <li>
-                  <div class="dew">
+                  <div class="dew" id="colors">
                     <img src="./img/icon0.png" alt="" />
                   </div>
                   <div class="desc">
@@ -59,7 +74,7 @@
                   </div>
                 </li>
                 <li>
-                  <div class="dew">
+                  <div class="dew" id="colors">
                     <img src="./img/icon0.png" alt="" />
                   </div>
                   <div class="desc">
@@ -71,7 +86,7 @@
                   </div>
                 </li>
                 <li>
-                  <div class="dew">
+                  <div class="dew" id="colors">
                     <img src="./img/icon0.png" alt="" />
                   </div>
                   <div class="desc">
@@ -83,7 +98,7 @@
                   </div>
                 </li>
                 <li>
-                  <div class="dew">
+                  <div class="dew" id="colors">
                     <img src="./img/icon0.png" alt="" />
                   </div>
                   <div class="desc">
@@ -102,13 +117,15 @@
           <div class="container">
             <span class="section-tit"
               >Skills
-              <span id="ani-dew"></span>
+              <div class="underbar" id="colors"></div>
+              <div class="inner" id="colors"></div>
+              <span class="ani-dew" id="colors"></span>
             </span>
             <div class="section-inner">
               <ul>
                 <li>
                   <div class="skill-content">
-                    <div class="skill-box">
+                    <div class="skill-box" id="colors">
                       <img src="./img/HTML5.png" alt="html5" />
                       <img src="./img/CSS3.png" alt="css3" />
                       <img src="./img/sass.png" alt="scss" />
@@ -123,38 +140,58 @@
                 </li>
                 <li>
                   <div class="skill-content">
-                    <div class="skill-box">
+                    <div class="skill-box" id="colors">
                       <img src="./img/javascript.png" alt="javascript" />
                       <h2>Javascript</h2>
                     </div>
-                    <div class="skill-desc"></div>
+                    <div class="skill-desc">
+                      <p>
+                        HTML5, CSS3, SCSS를 활용해 레이아웃을 구성하고 반응형
+                        웹페이지를 구현할 수 있습니다.
+                      </p>
+                    </div>
                   </div>
                 </li>
                 <li>
                   <div class="skill-content">
-                    <div class="skill-box">
+                    <div class="skill-box" id="colors">
                       <img src="./img/react.js.png" alt="react" />
                       <h2>React</h2>
                     </div>
-                    <div class="skill-desc"></div>
+                    <div class="skill-desc">
+                      <p>
+                        HTML5, CSS3, SCSS를 활용해 레이아웃을 구성하고 반응형
+                        웹페이지를 구현할 수 있습니다.
+                      </p>
+                    </div>
                   </div>
                 </li>
                 <li>
                   <div class="skill-content">
-                    <div class="skill-box">
+                    <div class="skill-box" id="colors">
                       <img src="./img/Figma.png" alt="figma" />
                       <img src="./img/github.png" alt="github" />
                     </div>
-                    <div class="skill-desc"></div>
+                    <div class="skill-desc">
+                      <p>
+                        HTML5, CSS3, SCSS를 활용해 레이아웃을 구성하고 반응형
+                        웹페이지를 구현할 수 있습니다.
+                      </p>
+                    </div>
                   </div>
                 </li>
                 <li>
                   <div class="skill-content">
-                    <div class="skill-box">
+                    <div class="skill-box" id="colors">
                       <img src="./img/firebase.png" alt="firebase" />
                       <h2>Firebase</h2>
                     </div>
-                    <div class="skill-desc"></div>
+                    <div class="skill-desc">
+                      <p>
+                        HTML5, CSS3, SCSS를 활용해 레이아웃을 구성하고 반응형
+                        웹페이지를 구현할 수 있습니다.
+                      </p>
+                    </div>
                   </div>
                 </li>
               </ul>
@@ -163,10 +200,82 @@
         </div>
         <div class="section project">
           <div class="container">
-            <span class="section-tit">Project</span>
-            <div class="section-inner">
+            <span class="section-tit"
+              >Project
+              <div class="underbar" id="colors"></div>
+              <div class="inner" id="colors"></div>
+            </span>
+            <div class="section-inner clone-modal-inner">
+              <div class="modalScreen">
+                <div class="modalScreenInner">
+                  <div class="cloneWeb">
+                    <img src="./img/cloneProjectthumnail.png" alt="" />
+                  </div>
+                  <div class="project-text">
+                    <ul class="clone-desc">
+                      <li>
+                        <div class="tit">
+                          <i class="fa-solid fa-chevron-right"></i>프로젝트 종류
+                        </div>
+                        <p>개인 프로젝트</p>
+                      </li>
+                      <li>
+                        <div class="tit">
+                          <i class="fa-solid fa-chevron-right"></i>제작 기간
+                        </div>
+                        <p>2024.04.03~2024.04.23</p>
+                      </li>
+                      <li>
+                        <div class="tit">
+                          <i class="fa-solid fa-chevron-right"></i>주요 기능
+                        </div>
+                        <p>HTML5 / CSS / Javascript</p>
+                      </li>
+                      <li>
+                        <div class="tit">
+                          <i class="fa-solid fa-chevron-right"></i>프로젝트 과정
+                        </div>
+                        <p>흥미로웠던 기능</p>
+                        <p>어려웠던 점</p>
+                        <p>문제해결 과정</p>
+                        <p>얻게된 것</p>
+                      </li>
+                    </ul>
+                  </div>
+                  <span class="modalCloseBtn"
+                    ><i class="fa-solid fa-xmark" id="colorstext"></i
+                  ></span>
+                </div>
+              </div>
+              <div class="modalScreen">
+                <div class="modalScreenInner">
+                  <div class="cloneWeb">
+                    <img src="./img/megastudybookclone.png" alt="" />
+                  </div>
+                  <span class="modalCloseBtn"
+                    ><i class="fa-solid fa-xmark" id="colorstext"></i
+                  ></span>
+                </div>
+              </div>
+              <div class="modalScreen">
+                <div class="modalScreenInner">
+                  세번째
+                  <span class="modalCloseBtn"
+                    ><i class="fa-solid fa-xmark" id="colorstext"></i
+                  ></span>
+                </div>
+              </div>
+              <div class="modalScreen">
+                <div class="modalScreenInner">
+                  네번째
+                  <span class="modalCloseBtn"
+                    ><i class="fa-solid fa-xmark" id="colorstext"></i
+                  ></span>
+                </div>
+              </div>
               <ul>
-                <li>
+                <li class="modalList" id="colors">
+                  <div class="dew" id="colors"></div>
                   <div class="clone-project">
                     <a href="">
                       <img src="./img/etude.png" alt="" />
@@ -174,7 +283,8 @@
                     </a>
                   </div>
                 </li>
-                <li>
+                <li class="modalList" id="colors">
+                  <div class="dew" id="colors"></div>
                   <div class="clone-project">
                     <a href="">
                       <img src="./img/etude.png" alt="" />
@@ -182,7 +292,8 @@
                     </a>
                   </div>
                 </li>
-                <li>
+                <li class="modalList">
+                  <div class="dew" id="colors"></div>
                   <div class="clone-project">
                     <a href="">
                       <img src="./img/etude.png" alt="" />
@@ -190,7 +301,8 @@
                     </a>
                   </div>
                 </li>
-                <li>
+                <li class="modalList">
+                  <div class="dew" id="colors"></div>
                   <div class="clone-project">
                     <a href="">
                       <img src="./img/etude.png" alt="" />
