--- a/profile/index.html
+++ b/profile/index.html
@@ -22,7 +22,7 @@
           <span class="select-color"></span>
           <span class="select-color"></span>
         </div>
-        <div class="colorChange" id="colors">
+        <div class="color-setting" id="colors">
           <i class="fa-solid fa-gear"></i>
         </div>
       </div>
@@ -300,8 +300,9 @@
                     </a>
                   </div>
                 </li>
-                <li class="modalList">
+                <li class="modalList" id="colors">
                   <div class="dew" id="colors"></div>
+
                   <div class="clone-project">
                     <a href="">
                       <img src="./img/etude.png" alt="" />
@@ -309,7 +310,7 @@
                     </a>
                   </div>
                 </li>
-                <li class="modalList">
+                <li class="modalList" id="colors">
                   <div class="dew" id="colors"></div>
                   <div class="clone-project">
                     <a href="">
