--- a/240501/JS03/index.html
+++ b/240501/JS03/index.html
@@ -39,11 +39,12 @@
           </form>
         </div>
         <p class="hash-tag">
+          <span class="tag-text">#소프트웨어공학</span>
+          <span class="tag-text">#Portfolio</span>
           <span class="tag-text">#퍼블리셔</span>
           <span class="tag-text">#UIUX</span>
-          <span class="tag-text">#포트폴리오</span>
           <span class="tag-text">#프론트앤드</span>
-          <span class="tag-text">#취업</span>
+          <span class="tag-text">#프로젝트</span>
         </p>
       </div>
     </div>
