--- a/profile/index.html
+++ b/profile/index.html
@@ -9,23 +9,23 @@
       src="https://kit.fontawesome.com/b06e382e17.js"
       crossorigin="anonymous"
     ></script>
-    <!-- custom style -->
+    <!-- custom css & js -->
     <link rel="stylesheet" href="./style.css" />
     <script defer src="./script.js"></script>
   </head>
   <body>
-    <div class="wrap">
-      <div class="color-select-box">
-        <div class="colorBox">
-          <span class="select-color"></span>
-          <span class="select-color"></span>
-          <span class="select-color"></span>
-          <span class="select-color"></span>
-        </div>
-        <div class="color-setting colors">
-          <i class="fa-solid fa-gear"></i>
-        </div>
+    <div class="color-select-box">
+      <div class="colorBox">
+        <span class="select-color"></span>
+        <span class="select-color"></span>
+        <span class="select-color"></span>
+        <span class="select-color"></span>
       </div>
+      <div class="color-setting colors">
+        <i class="fa-solid fa-gear"></i>
+      </div>
+    </div>
+    <div class="wrap">
       <header class="colors">
         <span class="logo">logo</span>
         <nav>
