--- a/profile/index.html
+++ b/profile/index.html
@@ -45,7 +45,7 @@
         </nav>
       </header>
       <section class="content">
-        <div class="section home">
+        <div #id="home" class="section home">
           <div class="container">
             <div class="title">
               <span class="top-text"
@@ -60,7 +60,7 @@
             <div class="img"></div>
           </div>
         </div>
-        <div class="section about">
+        <div #id="about" class="section about">
           <div class="container">
             <span class="section-tit"
               >It's me
@@ -121,7 +121,7 @@
             </div>
           </div>
         </div>
-        <div class="section skill">
+        <div #id="skill" class="section skill">
           <div class="container">
             <span class="section-tit"
               >Skills
@@ -206,7 +206,7 @@
             </div>
           </div>
         </div>
-        <div class="section project">
+        <div #id="project" class="section project">
           <div class="container">
             <span class="section-tit"
               >Project
@@ -435,7 +435,7 @@
             </div>
           </div>
         </div>
-        <div class="section example">
+        <div #id="example" class="section example">
           <div class="container">
             <span class="section-tit"
               >Example
