--- a/240514/test/test02/index.html
+++ b/240514/test/test02/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
     <script defer src="./script.js"></script>
+    <!-- 스크립트를 연동시키려면 type을 module로 만들어와야함 -->
   </head>
   <body>
     <div class="contianer">
