--- a/javascript/grid/index.html
+++ b/javascript/grid/index.html
@@ -106,79 +106,132 @@
         </div>
       </div>
     </header>
-    <section class="main">
-      <div class="hotel-main">
-        <h1 class="welcome-letter">
-          Welcome to the <br />Our resort<span>!</span>
-        </h1>
-      </div>
-    </section>
-    <section class="room-type types content">
-      <h1>객실유형</h1>
-      <div class="room-type-content">
-        <div class="double-room">
-          <h1>더블룸</h1>
-          <span><img src="./img/img_executive.jpg" alt="" /></span>
+    <div class="section-wrap">
+      <section class="main">
+        <div class="hotel-main">
+          <h1 class="welcome-letter">
+            Welcome to the <br />Our resort<span>!</span>
+          </h1>
+        </div>
+      </section>
+      <section class="room-type types content">
+        <h1>객실유형</h1>
+        <div class="room-type-content">
+          <div class="deluxe-double-room">
+            <h1>디럭스 더블룸</h1>
+            <span> <img src="./img/main_hotel_ocean.jpg" alt="" /></span>
 
-          <p>
-            안정감을 주는 베이지 및 화이트 컬러를 기본으로 한 더블룸은
-            마운틴뷰와 오션뷰 두 종류의 전망 객실로 준비되어 있습니다.
-          </p>
-        </div>
-        <div class="deluxe-double-room">
-          <h1>디럭스 더블룸</h1>
-          <span> <img src="./img/main_hotel_ocean.jpg" alt="" /></span>
+            <p>
+              기존 더블룸보다 여유로운 공간을 제공하며, 고객의 다양한 취향과
+              감각을 고려한 인테리어 스타일의 객실이 준비되어 있습니다.
+            </p>
+          </div>
+          <div class="twin-room">
+            <h1>디럭스 트윈룸</h1>
+            <span> <img src="./img//main_resort_family.jpg" alt="" /></span>
 
-          <p>
-            일반 더블룸보다 여유로운 공간을 제공하며, 고객의 다양한 취향과
-            감각을 고려한 인테리어 스타일의 객실이 준비되어 있습니다.
-          </p>
-        </div>
-        <div class="twin-room">
-          <h1>디럭스 트윈룸</h1>
-          <span> <img src="./img//main_resort_family.jpg" alt="" /></span>
+            <p>
+              모던한 감각에 따뜻한 우드 인테리어를 가미한 트윈룸은 기존
+              사이즈보다 한 사이즈 업된 트윈베드로 준비되어 있습니다.
+            </p>
+          </div>
+          <div class="family-room">
+            <h1>패밀리룸</h1>
+            <span> <img src="./img/main_hotel_superior.jpg" alt="" /></span>
 
-          <p>
-            모던한 감각에 따뜻한 우드 인테리어를 가미한 트윈룸은 기존 사이즈보다
-            한 사이즈 업된 트윈베드로 준비되어 있습니다.
-          </p>
-        </div>
-        <div class="family-room">
-          <h1>패밀리룸</h1>
-          <span> <img src="./img/main_hotel_superior.jpg" alt="" /></span>
+            <p>
+              큰방과 작은방으로 구성되어 있어 가족 모두 넓고 쾌적한 환경을
+              만끽할 수 있습니다. 안방에는 더블침대, 작은방에는 침구류 세트가
+              준비되어 있습니다.
+            </p>
+          </div>
+          <div class="double-room">
+            <h1>프레지덴셜(로얄)</h1>
+            <span><img src="./img//main_hotel_pr.jpg" alt="" /></span>
 
-          <p>
-            큰방과 작은방으로 구성되어 있어 가족 모두 넓고 쾌적한 환경을 만끽할
-            수 있습니다. 안방에는 더블침대, 작은방에는 침구류 세트가 준비되어
-            있습니다.
-          </p>
+            <p>
+              프레지덴셜(로얄)은 최대 10인까지 이용 가능한 객실로 조식과
+              라운지바까지 이용 가능합니다. 마운틴뷰와 오션뷰를 함께 즐길 수
+              있도록 공간을 확장하였습니다. 총 3개의 더블베드와 1개의 트윈베드가
+              준비되어 있습니다.
+            </p>
+          </div>
         </div>
-      </div>
-    </section>
-    <section class="activity types content">
-      <h1>부대시설</h1>
-      <div class="activity-content">
-        <div class="fun-active">
-          <img src="./img/image_15.jpg" alt="" />
-          <p>
-            가족과 함께 숲속 체험을 즐겨보세요. 4가지 코스를 취향에 따라 선택할
-            수 있습니다.
-          </p>
+      </section>
+      <section class="hotel-place types content">
+        <h1>부대시설</h1>
+        <div class="container">
+          <div class="item">
+            <img src="img/placeItem01.jpg" alt="" />
+            <p>
+              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
+              커피 한잔의 여유를 즐기세요
+            </p>
+          </div>
+          <div class="item">
+            <img src="img/placeItem00.jpg" alt="" />
+            <p>
+              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
+              커피 한잔의 여유를 즐기세요
+            </p>
+          </div>
+          <div class="item">
+            <img src="img/placeItem06.jpg" alt="" />
+            <p>
+              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
+              커피 한잔의 여유를 즐기세요
+            </p>
+          </div>
+          <div class="item">
+            <img src="img/placeItem03.jpg" alt="" />
+            <p>
+              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
+              커피 한잔의 여유를 즐기세요
+            </p>
+          </div>
+          <div class="item">
+            <img src="img/placeItem08.jpg" alt="" />
+            <p>
+              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
+              커피 한잔의 여유를 즐기세요
+            </p>
+          </div>
+          <div class="item">
+            <img src="img/placeItem07.jfif" alt="" />
+            <p>
+              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
+              커피 한잔의 여유를 즐기세요
+            </p>
+          </div>
         </div>
-        <div class="food-active">
-          <img src="./img/image_16.jpg" alt="" />
-          <p>
-            '오늘은 내가 요리사!' 쿠키를 직접 굽고 포장까지 완료할 수 있습니다.
-          </p>
+      </section>
+      <div class="middle-img"></div>
+      <section class="activity types content">
+        <h1>오늘의 이벤트</h1>
+        <div class="activity-content">
+          <div class="fun-active">
+            <img src="./img/image_15.jpg" alt="" />
+            <p>
+              가족과 함께 <span class="accent">'가을 숲속 체험'</span>을
+              즐겨보세요. 4가지 코스를 취향에 따라 선택할 수 있습니다.
+            </p>
+          </div>
+          <div class="food-active">
+            <img src="./img/image_16.jpg" alt="" />
+            <p>
+              <span class="accent">'오늘은 내가 요리사!'</span> 쿠키를 직접 굽고
+              포장까지 완료할 수 있습니다.
+            </p>
+          </div>
+          <div class="other-active">
+            <img src="./img/image_19.jpg" alt="" />
+            <p>
+              <span class="accent">'야외에서 즐기는 특별 상영영화'</span>를
+              즐겨보세요. (팝콘과 음료 또한 준비되어 있습니다.)
+            </p>
+          </div>
         </div>
-        <div class="other-active">
-          <img src="./img/image_19.jpg" alt="" />
-          <p>
-            특별 상영영화와 최신영화까지 모두 즐길 수 있습니다. (팝콘과 음료
-            또한 준비되어 있습니다.)
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </body>
 </html>
