--- a/javascript/mega/index.html
+++ b/javascript/mega/index.html
@@ -248,76 +248,78 @@
               </svg>
             </span>
           </div>
-          <div class="pageNum">
-            <span id="currentNum"></span>
-            <span>|</span>
-            <span id="lastNum"></span>
+          <div class="pageNumFix">
+            <div class="pageNum">
+              <span id="currentNum"></span>
+              <span>|</span>
+              <span id="lastNum"></span>
+            </div>
+            <ul class="slides">
+              <li>
+                <img
+                  class="first-slide-img"
+                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240319092743276.png"
+                  alt=""
+                />
+              </li>
+
+              <li>
+                <img
+                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240131090803470.png"
+                  alt=""
+                />
+              </li>
+
+              <li>
+                <img
+                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240125150716081.png"
+                  alt=""
+                />
+              </li>
+
+              <li>
+                <img
+                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240213173124056.png"
+                  alt=""
+                />
+              </li>
+
+              <li>
+                <img
+                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_231229104343443.png"
+                  alt=""
+                />
+              </li>
+
+              <li>
+                <img
+                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240130113122183.png"
+                  alt=""
+                />
+              </li>
+
+              <li>
+                <img
+                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240105093844171.png"
+                  alt=""
+                />
+              </li>
+
+              <li>
+                <img
+                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_231229104343443.png"
+                  alt=""
+                />
+              </li>
+
+              <li>
+                <img
+                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480__EC_8B_9C_EC_95_882_231116142420059.png"
+                  alt=""
+                />
+              </li>
+            </ul>
           </div>
-          <ul class="slides">
-            <li>
-              <img
-                class="first-slide-img"
-                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240319092743276.png"
-                alt=""
-              />
-            </li>
-
-            <li>
-              <img
-                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240131090803470.png"
-                alt=""
-              />
-            </li>
-
-            <li>
-              <img
-                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240125150716081.png"
-                alt=""
-              />
-            </li>
-
-            <li>
-              <img
-                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240213173124056.png"
-                alt=""
-              />
-            </li>
-
-            <li>
-              <img
-                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_231229104343443.png"
-                alt=""
-              />
-            </li>
-
-            <li>
-              <img
-                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240130113122183.png"
-                alt=""
-              />
-            </li>
-
-            <li>
-              <img
-                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240105093844171.png"
-                alt=""
-              />
-            </li>
-
-            <li>
-              <img
-                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_231229104343443.png"
-                alt=""
-              />
-            </li>
-
-            <li>
-              <img
-                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480__EC_8B_9C_EC_95_882_231116142420059.png"
-                alt=""
-              />
-            </li>
-          </ul>
         </div>
       </div>
       <div class="content-info">
@@ -359,170 +361,175 @@
             <li><a href="#">#수능영어는ALLTIME조정식</a></li>
             <li><a href="#">#서울대선배들의공부법</a></li>
           </ul>
+
           <div class="pick-slide">
-            <div class="pick-book">
-              <div class="book-item">
-                <div class="book-bg">
-                  <img src="./image/600x800_231113151613438.jpg" alt="" />
-                  <div id="book-tit-hover"></div>
+            <div class="pick-slide-wrap">
+              <div class="pick-book">
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img src="./image/600x800_231113151613438.jpg" alt="" />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">괜찮아 어법</div>
                 </div>
-                <div class="book-tit">괜찮아 어법</div>
-              </div>
-              <div class="book-item">
-                <div class="book-bg">
-                  <img src="./image/550x800_231113115816604.jpg" alt="" />
-                  <div id="book-tit-hover"></div>
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img src="./image/550x800_231113115816604.jpg" alt="" />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">백신 과학 중등 1-1</div>
                 </div>
-                <div class="book-tit">백신 과학 중등 1-1</div>
-              </div>
-              <div class="book-item">
-                <div class="book-bg">
-                  <img src="./image/600x800_231113152547275.jpg" alt="" />
-                  <div id="book-tit-hover"></div>
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img src="./image/600x800_231113152547275.jpg" alt="" />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">기출정식 고1 영어</div>
                 </div>
-                <div class="book-tit">기출정식 고1 영어</div>
-              </div>
-              <div class="book-item">
-                <div class="book-bg">
-                  <img src="./image/600x800_231114094202791.jpg" alt="" />
-                  <div id="book-tit-hover"></div>
-                </div>
-                <div class="book-tit">
-                  메가스터디 중학 국어 독해 비문학 사회 개념
-                </div>
-              </div>
-            </div>
-            <div class="pick-book">
-              <div class="book-item">
-                <div class="book-bg">
-                  <img
-                    src="./image/_ED_91_9C1__EA_B0_9C_EB_85_90_EC_97_94_20_EC_9C_A0_ED_98_95_ED_95_99_EC_8A_B5_201-1_231114192343377.jpg"
-                    alt=""
-                  />
-                  <div id="book-tit-hover"></div>
-                </div>
-                <div class="book-tit">
-                  엠베스트 민정범 개념엔 유형학습 중학수학 1-1
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img src="./image/600x800_231114094202791.jpg" alt="" />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">
+                    메가스터디 중학 국어 독해 비문학 사회 개념
+                  </div>
                 </div>
               </div>
-              <div class="book-item">
-                <div class="book-bg">
-                  <img
-                    src="./image/_ED_95_9C_EB_AC_B8_EC_A0_95_EC_A0_95_EB_A6_AC_EC_9D_98_ED_9E_98_1_EA_B6_8C__ED_91_9C1_231113155244541.jpg"
-                    alt=""
-                  />
-                  <div id="book-tit-hover"></div>
+              <div class="pick-book">
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img
+                      src="./image/_ED_91_9C1__EA_B0_9C_EB_85_90_EC_97_94_20_EC_9C_A0_ED_98_95_ED_95_99_EC_8A_B5_201-1_231114192343377.jpg"
+                      alt=""
+                    />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">
+                    엠베스트 민정범 개념엔 유형학습 중학수학 1-1
+                  </div>
                 </div>
-                <div class="book-tit">
-                  초등 문해력 한 문장 정리의 힘 기본편 1권
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img
+                      src="./image/_ED_95_9C_EB_AC_B8_EC_A0_95_EC_A0_95_EB_A6_AC_EC_9D_98_ED_9E_98_1_EA_B6_8C__ED_91_9C1_231113155244541.jpg"
+                      alt=""
+                    />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">
+                    초등 문해력 한 문장 정리의 힘 기본편 1권
+                  </div>
                 </div>
-              </div>
-              <div class="book-item">
-                <div class="book-bg">
-                  <img src="./image/600x800_231114171700828.jpg" alt="" />
-                  <div id="book-tit-hover"></div>
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img src="./image/600x800_231114171700828.jpg" alt="" />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">
+                    메가스터디 N제 과학탐구영역 지구과학1 285제
+                  </div>
                 </div>
-                <div class="book-tit">
-                  메가스터디 N제 과학탐구영역 지구과학1 285제
-                </div>
-              </div>
-              <div class="book-item">
-                <div class="book-bg">
-                  <img
-                    src="./image/600x800_1_EA_B6_8C_231110152642537.jpg"
-                    alt=""
-                  />
-                  <div id="book-tit-hover"></div>
-                </div>
-                <div class="book-tit">뭔말 과학 용어 200 1권</div>
-              </div>
-            </div>
-            <div class="pick-book">
-              <div class="book-item">
-                <div class="book-bg">
-                  <img
-                    src="./image/600x800_1_EA_B6_8C_231113093521503.jpg"
-                    alt=""
-                  />
-                  <div id="book-tit-hover"></div>
-                </div>
-                <div class="book-tit">뭔말 국어 용어 200 1권</div>
-              </div>
-              <div class="book-item">
-                <div class="book-bg">
-                  <img src="./image/600x800_231113095445787.jpg" alt="" />
-                  <div id="book-tit-hover"></div>
-                </div>
-                <div class="book-tit">뭔말 역사 용어 150</div>
-              </div>
-              <div class="book-item">
-                <div class="book-bg">
-                  <img src="./image/600x800_01_231114112433716.jpg" alt="" />
-                  <div id="book-tit-hover"></div>
-                </div>
-                <div class="book-tit">
-                  메가스터디 중학 국어 문학 필수개념 독해 연습 1권
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img
+                      src="./image/600x800_1_EA_B6_8C_231110152642537.jpg"
+                      alt=""
+                    />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">뭔말 과학 용어 200 1권</div>
                 </div>
               </div>
-              <div class="book-item">
-                <div class="book-bg">
-                  <img src="./image/550x800_231113180041391.jpg" alt="" />
-                  <div id="book-tit-hover"></div>
+              <div class="pick-book">
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img
+                      src="./image/600x800_1_EA_B6_8C_231113093521503.jpg"
+                      alt=""
+                    />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">뭔말 국어 용어 200 1권</div>
                 </div>
-                <div class="book-tit">백신 통합과학(너의 만점을 위한 바람)</div>
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img src="./image/600x800_231113095445787.jpg" alt="" />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">뭔말 역사 용어 150</div>
+                </div>
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img src="./image/600x800_01_231114112433716.jpg" alt="" />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">
+                    메가스터디 중학 국어 문학 필수개념 독해 연습 1권
+                  </div>
+                </div>
+                <div class="book-item">
+                  <div class="book-bg">
+                    <img src="./image/550x800_231113180041391.jpg" alt="" />
+                    <div id="book-tit-hover"></div>
+                  </div>
+                  <div class="book-tit">
+                    백신 통합과학(너의 만점을 위한 바람)
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="bar-button">
-            <div class="bar">
-              <div class="bar-inner"></div>
-            </div>
-            <div class="btn">
-              <span class="left"
-                ><svg
-                  width="36"
-                  height="36"
-                  viewBox="0 0 36 36"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M22.4551 17.9375L13.5043 8.9867"
-                    stroke="current"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                  />
-                  <path
-                    d="M22.4551 18.0234L13.5043 26.9742"
-                    stroke="current"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                  />
-                </svg>
-              </span>
-              <span class="right">
-                <svg
-                  width="36"
-                  height="36"
-                  viewBox="0 0 36 36"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M22.4551 17.9375L13.5043 8.9867"
-                    stroke="#111111"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                  />
-                  <path
-                    d="M22.4551 18.0234L13.5043 26.9742"
-                    stroke="#111111"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                  />
-                </svg>
-              </span>
-            </div>
+        </div>
+        <div class="bar-button">
+          <div class="bar">
+            <div class="bar-inner"></div>
+          </div>
+          <div class="btn">
+            <span class="left"
+              ><svg
+                width="36"
+                height="36"
+                viewBox="0 0 36 36"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M22.4551 17.9375L13.5043 8.9867"
+                  stroke="#111111"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+                <path
+                  d="M22.4551 18.0234L13.5043 26.9742"
+                  stroke="#111111"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </span>
+            <span class="right">
+              <svg
+                width="36"
+                height="36"
+                viewBox="0 0 36 36"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M22.4551 17.9375L13.5043 8.9867"
+                  stroke="#111111"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+                <path
+                  d="M22.4551 18.0234L13.5043 26.9742"
+                  stroke="#111111"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </span>
           </div>
         </div>
       </div>
@@ -539,7 +546,7 @@
           <div class="select-btn">
             <span class="title">베스트 셀러</span>
             <span id="grade">
-              <span>초등</span>
+              <span class="active">초등</span>
               <span>중등</span>
               <span>고등</span>
               <span>단행본</span>
@@ -592,7 +599,7 @@
                 </svg>
               </span>
             </div>
-            <div class="item low">
+            <div class="item active low">
               <div class="slide-item">
                 <img src="./image/XL_231218121029501.jpg" alt="" />
                 <h2>이서윤쌤의 초등 한자 어휘 끝내기 1단계</h2>
@@ -648,10 +655,6 @@
               <div class="slide-item">
                 <img src="./image/600x800_01_231114112433716.jpg" alt="" />
                 <h2>메가스터디 중학 국어 비문학 독해 연습 1권</h2>
-              </div>
-              <div class="slide-item">
-                <img src="" alt="" />
-                <h2></h2>
               </div>
             </div>
             <div class="item high">
