--- a/javascript/grid/index.html
+++ b/javascript/grid/index.html
@@ -164,43 +164,51 @@
           <div class="item">
             <img src="img/placeItem01.jpg" alt="" />
             <p>
-              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
-              커피 한잔의 여유를 즐기세요
+              <b>오락실</b>
+              온 가족이 함께 즐기는 전자오락실, 당구장, 탁구장 등 다양한
+              놀거리로 가득한 PLAY ZONE
             </p>
           </div>
           <div class="item">
             <img src="img/placeItem00.jpg" alt="" />
             <p>
+              <b>베이커리&카페</b>
               스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
-              커피 한잔의 여유를 즐기세요
+              커피 한잔의 여유를 즐기세요.
             </p>
           </div>
           <div class="item">
             <img src="img/placeItem06.jpg" alt="" />
             <p>
-              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
-              커피 한잔의 여유를 즐기세요
+              <b>조식 서비스</b>
+              동해안 바다에 위치한 쏠비치에서는 낮에는 눈부신 햇살의 바다
+              전경을, 밤에는 감성적인 야경을 감상하며 편안한 휴식을 즐길 수
+              있습니다.
             </p>
           </div>
           <div class="item">
             <img src="img/placeItem03.jpg" alt="" />
             <p>
-              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
-              커피 한잔의 여유를 즐기세요
+              <b>굿앤굿 마트</b>
+              고객님들이 필요로 하는 물품들로 채워진 마트에서 편안한 분위기로
+              고객님의 여유로운 쇼핑을 도와드립니다.
             </p>
           </div>
           <div class="item">
             <img src="img/placeItem08.jpg" alt="" />
             <p>
-              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
-              커피 한잔의 여유를 즐기세요
+              <b>해수 사우나</b>
+              인체에 유익한 온도로 끓인 온탕, 고객들의 건강과 심신의 피로를 풀어
+              드립니다.
             </p>
           </div>
           <div class="item">
             <img src="img/placeItem07.jfif" alt="" />
             <p>
-              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
-              커피 한잔의 여유를 즐기세요
+              <b>셰프스 키친</b>
+              프리미엄 뷔페 전문 레스토랑 '셰프스 키친(Chef's Kitchen)' 에서는
+              동해의 아름다운 햇살과 함께 갓 구운 6종류의 빵과 신선한 샐러드로
+              여유로운 아침을 만끽할 수 있습니다.
             </p>
           </div>
         </div>
@@ -232,6 +240,37 @@
           </div>
         </div>
       </section>
+      <section class="popular-place types content">
+        <h1>추천 명소</h1>
+        <p>(해당 명소 클릭시 관련 게시물 사이트로 이동합니다.)</p>
+        <div class="imgAll">
+          <div class="imgItem">
+            <h2>양양 쏠비치 해수욕장</h2>
+            <img src="./img/popular00.jpg" alt="popular00" />
+          </div>
+          <div class="imgItem">
+            <h2>낙산사</h2>
+            <img src="./img/popular02.jpg" alt="popular02" />
+          </div>
+          <div class="imgItem">
+            <h2>양양 쏠비치 해수욕장</h2>
+            <img src="./img/popular03.png" alt="popular03" />
+          </div>
+          <div class="imgItem">
+            <h2>오산리 선사유적박물관</h2>
+            <img src="./img/popular04.jpg" alt="popular04" />
+          </div>
+          <div class="imgItem">
+            <h2>설악산 대청봉</h2>
+            <img src="./img/popular05.jpg" alt="popular05" />
+          </div>
+          <div class="imgItem">
+            <h2>양양 쏠비치 해수욕장</h2>
+            <img src="./img/popular06.png" alt="popular06" />
+          </div>
+        </div>
+      </section>
     </div>
+    <footer></footer>
   </body>
 </html>
