--- a/javascript/grid/index.html
+++ b/javascript/grid/index.html
@@ -165,50 +165,62 @@
             <img src="img/placeItem01.jpg" alt="" />
             <p>
               <b>오락실</b>
-              온 가족이 함께 즐기는 전자오락실, 당구장, 탁구장 등 다양한
-              놀거리로 가득한 PLAY ZONE
+              <span>
+                온 가족이 함께 즐기는 전자오락실, 당구장, 탁구장 등 다양한
+                놀거리로 가득한 PLAY ZONE</span
+              >
             </p>
           </div>
           <div class="item">
             <img src="img/placeItem00.jpg" alt="" />
             <p>
               <b>베이커리&카페</b>
-              스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
-              커피 한잔의 여유를 즐기세요.
+              <span>
+                스페인의 이국적인 풍경과 바다가 한눈에 펼처진 베이커리& 카페에서
+                커피 한잔의 여유를 즐기세요.</span
+              >
             </p>
           </div>
           <div class="item">
             <img src="img/placeItem06.jpg" alt="" />
             <p>
               <b>조식 서비스</b>
-              동해안 바다에 위치한 쏠비치에서는 낮에는 눈부신 햇살의 바다
-              전경을, 밤에는 감성적인 야경을 감상하며 편안한 휴식을 즐길 수
-              있습니다.
+              <span>
+                동해안 바다에 위치한 쏠비치에서는 낮에는 눈부신 햇살의 바다
+                전경을, 밤에는 감성적인 야경을 감상하며 편안한 휴식을 즐길 수
+                있습니다.</span
+              >
             </p>
           </div>
           <div class="item">
             <img src="img/placeItem03.jpg" alt="" />
             <p>
               <b>굿앤굿 마트</b>
-              고객님들이 필요로 하는 물품들로 채워진 마트에서 편안한 분위기로
-              고객님의 여유로운 쇼핑을 도와드립니다.
+              <span>
+                고객님들이 필요로 하는 물품들로 채워진 마트에서 편안한 분위기로
+                고객님의 여유로운 쇼핑을 도와드립니다.</span
+              >
             </p>
           </div>
           <div class="item">
             <img src="img/placeItem08.jpg" alt="" />
             <p>
               <b>해수 사우나</b>
-              인체에 유익한 온도로 끓인 온탕, 고객들의 건강과 심신의 피로를 풀어
-              드립니다.
+              <span>
+                인체에 유익한 온도로 끓인 온탕, 고객들의 건강과 심신의 피로를
+                풀어 드립니다.</span
+              >
             </p>
           </div>
           <div class="item">
             <img src="img/placeItem07.jfif" alt="" />
             <p>
               <b>셰프스 키친</b>
-              프리미엄 뷔페 전문 레스토랑 '셰프스 키친(Chef's Kitchen)' 에서는
-              동해의 아름다운 햇살과 함께 갓 구운 6종류의 빵과 신선한 샐러드로
-              여유로운 아침을 만끽할 수 있습니다.
+              <span>
+                프리미엄 뷔페 전문 레스토랑 '셰프스 키친(Chef's Kitchen)' 에서는
+                동해의 아름다운 햇살과 함께 갓 구운 6종류의 빵과 신선한 샐러드로
+                여유로운 아침을 만끽할 수 있습니다.</span
+              >
             </p>
           </div>
         </div>
@@ -244,33 +256,79 @@
         <h1>추천 명소</h1>
         <p>(해당 명소 클릭시 관련 게시물 사이트로 이동합니다.)</p>
         <div class="imgAll">
-          <div class="imgItem">
-            <h2>양양 쏠비치 해수욕장</h2>
+          <a
+            href="https://m.blog.naver.com/likeyyang/221812498890"
+            target="_blank"
+            class="imgItem"
+          >
+            <h2>오산리 해수욕장</h2>
             <img src="./img/popular00.jpg" alt="popular00" />
-          </div>
-          <div class="imgItem">
+          </a>
+          <a
+            href="https://m.blog.naver.com/PostView.naver?blogId=likeyyang&logNo=222787046847&referrerCode=0&searchKeyword=%EB%82%99%EC%82%B0%EC%82%AC"
+            target="_blank"
+            class="imgItem"
+          >
             <h2>낙산사</h2>
             <img src="./img/popular02.jpg" alt="popular02" />
-          </div>
-          <div class="imgItem">
-            <h2>양양 쏠비치 해수욕장</h2>
+          </a>
+          <a
+            href="https://m.blog.naver.com/PostView.naver?blogId=likeyyang&logNo=223306663813&referrerCode=0&searchKeyword=%EB%82%A8%EC%95%A0%ED%95%AD"
+            target="_blank"
+            class="imgItem"
+          >
+            <h2>남애항</h2>
             <img src="./img/popular03.png" alt="popular03" />
-          </div>
-          <div class="imgItem">
+          </a>
+          <a
+            href="https://m.blog.naver.com/PostView.naver?blogId=likeyyang&logNo=223348009012&referrerCode=0&searchKeyword=%EC%98%A4%EC%82%B0%EB%A6%AC"
+            target="_blank"
+            class="imgItem"
+          >
             <h2>오산리 선사유적박물관</h2>
             <img src="./img/popular04.jpg" alt="popular04" />
-          </div>
-          <div class="imgItem">
+          </a>
+          <a
+            href="https://m.blog.naver.com/PostView.naver?blogId=likeyyang&logNo=223258255516&referrerCode=0&searchKeyword=%EC%84%A4%EC%95%85%EC%82%B0"
+            target="_blank"
+            class="imgItem"
+          >
             <h2>설악산 대청봉</h2>
             <img src="./img/popular05.jpg" alt="popular05" />
-          </div>
-          <div class="imgItem">
-            <h2>양양 쏠비치 해수욕장</h2>
+          </a>
+          <a
+            href="https://m.blog.naver.com/PostView.naver?blogId=likeyyang&logNo=222923959336&referrerCode=0&searchKeyword=%EC%9A%A9%EC%86%8C"
+            class="imgItem"
+            target="_blank"
+          >
+            <h2>용소 폭포</h2>
             <img src="./img/popular06.png" alt="popular06" />
-          </div>
+          </a>
         </div>
       </section>
     </div>
-    <footer></footer>
+    <footer>
+      <div class="footer-inner">
+        <ul>
+          <li>회사소개</li>
+          <li>뉴스룸</li>
+          <li>인재채용</li>
+          <li>제휴문의</li>
+          <li>웹진</li>
+          <li>개인정보처리방침</li>
+          <li>이용약관</li>
+          <li>원격지원</li>
+        </ul>
+
+        <p>
+          (주)호텔앤리조트강원 강원특별자치도 홍천군 남면 덕머리길 대표이사 :
+          김이슬, 이지수 개인정보 보호책임자 : 대표이사 김이슬 사업자등록번호 :
+          223-81-00000 통신판매업신고 : 2002-강원홍천-0008 통신판매사업자 정보
+          호텔예약센터 1588-4988 운영시간 09:00 ~18:00 ( 연중무휴 ) 이메일
+          petit1234@daemyungsono.com
+        </p>
+        <p>Copyright © HOTEL INTERNATIONAL Co., Ltd. All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
