--- a/javascript/grid/index.html
+++ b/javascript/grid/index.html
@@ -50,18 +50,18 @@
               placeholder="도시, 명소, 호텔을 입력하세요."
             />
           </li>
-          <li>
+          <li class="check-in">
             <span class="title">
               <span>체크인</span>
               <span>체크아웃</span>
             </span>
             <div class="input-box">
-              <span></span>
-              <span></span>
-              <span></span>
+              <span>05월 21일</span>
+              <span>1박</span>
+              <span>05월 22일</span>
             </div>
           </li>
-          <li>
+          <li class="check-in-person">
             <span class="title">
               <span>객실수</span>
               <span>성인</span>
@@ -78,8 +78,8 @@
           </li>
         </ul>
       </div>
-      <div class="calender-member">
-        <div class="calender">
+      <div class="calendar-member">
+        <div class="calendar">
           <input type="date" id="now-month" />
           <input type="date" id="next-month" />
         </div>
@@ -138,7 +138,6 @@
           <div class="family-room">
             <h1>패밀리룸</h1>
             <span> <img src="./img/main_hotel_superior.jpg" alt="" /></span>
-
             <p>
               큰방과 작은방으로 구성되어 있어 가족 모두 넓고 쾌적한 환경을
               만끽할 수 있습니다. 안방에는 더블침대, 작은방에는 침구류 세트가
@@ -150,10 +149,9 @@
             <span><img src="./img//main_hotel_pr.jpg" alt="" /></span>
 
             <p>
-              프레지덴셜(로얄)은 최대 10인까지 이용 가능한 객실로 조식과
-              라운지바까지 이용 가능합니다. 마운틴뷰와 오션뷰를 함께 즐길 수
-              있도록 공간을 확장하였습니다. 총 3개의 더블베드와 1개의 트윈베드가
-              준비되어 있습니다.
+              프레지덴셜(로얄)은 공간을 확장하여 최대 10인까지 이용 가능한
+              객실로 조식과 라운지바까지 이용 가능합니다. 총 3개의 더블베드와
+              1개의 트윈베드가 준비되어 있습니다.
             </p>
           </div>
         </div>
