--- a/javascript/filter/index.html
+++ b/javascript/filter/index.html
@@ -34,6 +34,26 @@
       <div class="container">
         <ul class="createList"></ul>
       </div>
+      <div class="modal-content">
+        <div class="modal-inner">
+          <span class="modalItem">
+            <span class="closeBtn">✖</span>
+
+            <img src="./image/img_br0101.jpg" alt="" />
+            <div class="content createModal">
+              <div>
+                <h4>속 편한 전복 한상 죽</h4>
+                <span>10,000원</span>
+              </div>
+              <p>
+                버섯과 전복이 들어간 든든한 한상 죽. 신선한 국내산 재료와 우리
+                쌀의 만남을 직접 느껴보세요. 든든하고 속 편한 한끼를 부담없는
+                가격으로 즐길 수 있습니다.
+              </p>
+            </div>
+          </span>
+        </div>
+      </div>
     </div>
   </body>
 </html>
