--- a/javascript/일단 보류/modal/index.html
+++ b/javascript/일단 보류/modal/index.html
@@ -8,15 +8,16 @@
     <script defer src="./script.js"></script>
   </head>
   <body>
-    <div class="container"></div>
-    <div class="content">
-      <div class="title">Modal Project</div>
-      <button>OPEN MODAL</button>
-    </div>
-    <div class="modal-content">
-      <div class="modal-inner">
-        <span class="closeBtn">✖</span>
-        <span>📕📗📘</span>
+    <div class="container">
+      <div class="content">
+        <div class="title">Modal Project</div>
+        <button>OPEN MODAL</button>
+      </div>
+      <div class="modal-content">
+        <div class="modal-inner">
+          <span class="closeBtn">✖</span>
+          <span>📕📗📘</span>
+        </div>
       </div>
     </div>
   </body>
