--- a/javascript/mega/index.html
+++ b/javascript/mega/index.html
@@ -600,47 +600,49 @@
               </span>
             </div>
             <div class="item active low">
-              <div class="slide-item">
-                <img src="./image/XL_231218121029501.jpg" alt="" />
-                <h2>이서윤쌤의 초등 한자 어휘 끝내기 1단계</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/600x800_231113132408511.png" alt="" />
-                <h2>이서윤쌤의 초등한자어휘 일력</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/레벨1_표1_231227165809845.jpg" alt="" />
-                <h2>초등영문법 문장의 원리 Level 1</h2>
-              </div>
-              <div class="slide-item">
-                <img
-                  src="./image/600x800_2_EA_B6_8C_231113094316587.jpg"
-                  alt=""
-                />
-                <h2>뭔말 국어 용어 200 2권</h2>
-              </div>
-              <div class="slide-item">
-                <img
-                  src="./image/600x800_2_EA_B6_8C_231110153429381.jpg"
-                  alt=""
-                />
-                <h2>뭔말 과학 용어 200 2권</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/595x800_231117094745998.jpg" alt="" />
-                <h2>스도쿠로 익히는 초등 필수 고사성어 100</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/550x800_02_231114153946164.jpg" alt="" />
-                <h2>1일 1독해 우리 고전 50 2권 교과서 고전문학</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/550x800_01_231114141954867.jpg" alt="" />
-                <h2>1일 1독해 세상을 바꾼 인물 100 1권 문화·예술</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/550x800_231113101115729.jpg" alt="" />
-                <h2>용돈 잘 쓰는 법</h2>
+              <div class="items-wrap">
+                <div class="slide-item">
+                  <img src="./image/XL_231218121029501.jpg" alt="" />
+                  <h2>이서윤쌤의 초등 한자 어휘 끝내기 1단계</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/600x800_231113132408511.png" alt="" />
+                  <h2>이서윤쌤의 초등한자어휘 일력</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/레벨1_표1_231227165809845.jpg" alt="" />
+                  <h2>초등영문법 문장의 원리 Level 1</h2>
+                </div>
+                <div class="slide-item">
+                  <img
+                    src="./image/600x800_2_EA_B6_8C_231113094316587.jpg"
+                    alt=""
+                  />
+                  <h2>뭔말 국어 용어 200 2권</h2>
+                </div>
+                <div class="slide-item">
+                  <img
+                    src="./image/600x800_2_EA_B6_8C_231110153429381.jpg"
+                    alt=""
+                  />
+                  <h2>뭔말 과학 용어 200 2권</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/595x800_231117094745998.jpg" alt="" />
+                  <h2>스도쿠로 익히는 초등 필수 고사성어 100</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_02_231114153946164.jpg" alt="" />
+                  <h2>1일 1독해 우리 고전 50 2권 교과서 고전문학</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_01_231114141954867.jpg" alt="" />
+                  <h2>1일 1독해 세상을 바꾼 인물 100 1권 문화·예술</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_231113101115729.jpg" alt="" />
+                  <h2>용돈 잘 쓰는 법</h2>
+                </div>
               </div>
             </div>
             <div class="item middle">
