--- a/javascript/mega/index.html
+++ b/javascript/mega/index.html
@@ -646,91 +646,145 @@
               </div>
             </div>
             <div class="item middle">
-              <div class="slide-item">
-                <img src="./image/600x800_231113104453166.jpg" alt="" />
-                <h2>완쏠 개념 중등수학 1-1 (2025년)</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/550x800_231113115816604.jpg" alt="" />
-                <h2>백신 과학 중등 1-1 (2023년)</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/600x800_01_231114112433716.jpg" alt="" />
-                <h2>메가스터디 중학 국어 비문학 독해 연습 1권</h2>
+              <div class="items-wrap">
+                <div class="slide-item">
+                  <img src="./image/600x800_231113104453166.jpg" alt="" />
+                  <h2>완쏠 개념 중등수학 1-1 (2025년)</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_231113115816604.jpg" alt="" />
+                  <h2>백신 과학 중등 1-1 (2023년)</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/600x800_01_231114112433716.jpg" alt="" />
+                  <h2>메가스터디 중학 국어 비문학 독해 연습 1권</h2>
+                </div>
+                <div class="slide-item">
+                  <img
+                    src="./image/600x800_2_EA_B6_8C_231113094316587.jpg"
+                    alt=""
+                  />
+                  <h2>뭔말 국어 용어 200 2권</h2>
+                </div>
+                <div class="slide-item">
+                  <img
+                    src="./image/600x800_2_EA_B6_8C_231110153429381.jpg"
+                    alt=""
+                  />
+                  <h2>뭔말 과학 용어 200 2권</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/595x800_231117094745998.jpg" alt="" />
+                  <h2>스도쿠로 익히는 초등 필수 고사성어 100</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_02_231114153946164.jpg" alt="" />
+                  <h2>1일 1독해 우리 고전 50 2권 교과서 고전문학</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_01_231114141954867.jpg" alt="" />
+                  <h2>1일 1독해 세상을 바꾼 인물 100 1권 문화·예술</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_231113101115729.jpg" alt="" />
+                  <h2>용돈 잘 쓰는 법</h2>
+                </div>
               </div>
             </div>
             <div class="item high">
-              <div class="slide-item">
-                <img
-                  src="./image/N제 영어_독해_표1_231220115357493 (1).jpg"
-                  alt=""
-                />
-                <h2>메가스터디 N제 영어영역 독해 332제 (2024년)</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/국어문학_표1_231208175413110.jpg" alt="" />
-                <h2>수능 기출 올픽 국어 문학 (2025 수능 대비)</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/영어독해_표1_231208180211435.jpg" alt="" />
-                <h2>수능 기출 올픽 영어 독해 (2025 수능 대비)</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/수학1_표1_231208175158881.jpg" alt="" />
-                <h2>수능 기출 올픽 수학1 (2025 수능 대비)</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/600x800_231113151613438.jpg" alt="" />
-                <h2>괜찮아 어법</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/600x800_231113152547275.jpg" alt="" />
-                <h2>기출정식 고1 영어</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/595x800_띠지_231114102821522.jpg" alt="" />
-                <h2>메가스터디 수능 수학 킥(KICK) 수학1</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/550x800_231113180041391.jpg" alt="" />
-                <h2>백신 통합과학 (너의 만점을 위한 바람)</h2>
-              </div>
-              <div class="slide-item">
-                <img src="./image/600x800_231114171700828 (1).jpg" alt="" />
-                <h2>메가스터디 N제 과학탐구영역 지구과학1 285제</h2>
-              </div>
-              <div class="slide-item">
-                <img
-                  src="./image/N제 수학1_3점공략_표1_231220120328159.jpg"
-                  alt=""
-                />
-                <h2>메가스터디 N제 수학1 3점 공략 243제 (2024년)</h2>
+              <div class="items-wrap">
+                <div class="slide-item">
+                  <img
+                    src="./image/N제 영어_독해_표1_231220115357493 (1).jpg"
+                    alt=""
+                  />
+                  <h2>메가스터디 N제 영어영역 독해 332제 (2024년)</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/국어문학_표1_231208175413110.jpg" alt="" />
+                  <h2>수능 기출 올픽 국어 문학 (2025 수능 대비)</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/영어독해_표1_231208180211435.jpg" alt="" />
+                  <h2>수능 기출 올픽 영어 독해 (2025 수능 대비)</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/수학1_표1_231208175158881.jpg" alt="" />
+                  <h2>수능 기출 올픽 수학1 (2025 수능 대비)</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/600x800_231113151613438.jpg" alt="" />
+                  <h2>괜찮아 어법</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/600x800_231113152547275.jpg" alt="" />
+                  <h2>기출정식 고1 영어</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/595x800_띠지_231114102821522.jpg" alt="" />
+                  <h2>메가스터디 수능 수학 킥(KICK) 수학1</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_231113180041391.jpg" alt="" />
+                  <h2>백신 통합과학 (너의 만점을 위한 바람)</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/600x800_231114171700828 (1).jpg" alt="" />
+                  <h2>메가스터디 N제 과학탐구영역 지구과학1 285제</h2>
+                </div>
+                <div class="slide-item">
+                  <img
+                    src="./image/N제 수학1_3점공략_표1_231220120328159.jpg"
+                    alt=""
+                  />
+                  <h2>메가스터디 N제 수학1 3점 공략 243제 (2024년)</h2>
+                </div>
               </div>
             </div>
             <div class="item special">
-              <div class="slide-item">
-                <img src="" alt="" />
-                <h2></h2>
-              </div>
-              <div class="slide-item">
-                <img src="" alt="" />
-                <h2></h2>
-              </div>
-              <div class="slide-item">
-                <img src="" alt="" />
-                <h2></h2>
-              </div>
-              <div class="slide-item">
-                <img src="" alt="" />
-                <h2></h2>
-              </div>
-              <div class="slide-item">
-                <img src="" alt="" />
-                <h2></h2>
-              </div>
-              <div class="slide-item">
-                <img src="" alt="" />
-                <h2></h2>
+              <div class="items-wrap">
+                <div class="slide-item">
+                  <img
+                    src="./image/100일미라클_표1_240125135413331.jpg"
+                    alt=""
+                  />
+                  <h2></h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/595x800_띠지_231114102821522.jpg" alt="" />
+                  <h2>띠지의 수능 수학</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_231114144634663.jpg" alt="" />
+                  <h2>초간단 집밥 다이어트 레시피</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_231114135448902.jpg" alt="" />
+                  <h2>서울대 의대 1학년의 찐 합격 노트</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_231114115823398.jpg" alt="" />
+                  <h2>회사는 엑셀을 가르쳐주지 않아요</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_231114111225955.jpg" alt="" />
+                  <h2>의대에 가고 싶어졌습니다.</h2>
+                </div>
+                <div class="slide-item">
+                  <img
+                    src="./image/100일미라클_표1_240125135413331.jpg"
+                    alt=""
+                  />
+                  <h2>하와이 대저택 100일 미라클</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/595x800_띠지_231114102821522.jpg" alt="" />
+                  <h2>띠지의 수능 수학</h2>
+                </div>
+                <div class="slide-item">
+                  <img src="./image/550x800_231114144634663.jpg" alt="" />
+                  <h2>초간단 집밥 다이어트 레시피</h2>
+                </div>
               </div>
             </div>
             <div class="slide-bar">
